mealie/mealie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mealie
    spec:
      containers:
      - image: ghcr.io/mealie-recipes/mealie:v3.9.2
        name: mealie
        volumeMounts:
          - mountPath: "/app/data/"
            name: mealiepv
      restartPolicy: Always
      volumes:
      - name: mealiepv
        persistentVolumeClaim:
          claimName: mealiepvc
status: {}
