mealie/mealiesvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  ports:
  - port: 9925
    protocol: TCP
    targetPort: 9000
  selector:
    app: mealie
  type: ClusterIP
status:
  loadBalancer: {}
